--- a/Software/teensy_ann_arbor_percussion_synthesizer_runner/.project
+++ b/Software/teensy_ann_arbor_percussion_synthesizer_runner/.project
@@ -47,6 +47,31 @@
 			<location>/home/xinniw/arduino-1.8.5/hardware/teensy/avr/cores/teensy3</location>
 		</link>
 		<link>
+			<name>libraries/Audio</name>
+			<type>2</type>
+			<location>/home/xinniw/arduino-1.8.5/hardware/teensy/avr/libraries/Audio</location>
+		</link>
+		<link>
+			<name>libraries/SD</name>
+			<type>2</type>
+			<location>/home/xinniw/arduino-1.8.5/hardware/teensy/avr/libraries/SD</location>
+		</link>
+		<link>
+			<name>libraries/SPI</name>
+			<type>2</type>
+			<location>/home/xinniw/arduino-1.8.5/hardware/teensy/avr/libraries/SPI</location>
+		</link>
+		<link>
+			<name>libraries/SerialFlash</name>
+			<type>2</type>
+			<location>/home/xinniw/arduino-1.8.5/hardware/teensy/avr/libraries/SerialFlash</location>
+		</link>
+		<link>
+			<name>libraries/Wire</name>
+			<type>2</type>
+			<location>/home/xinniw/arduino-1.8.5/hardware/teensy/avr/libraries/Wire</location>
+		</link>
+		<link>
 			<name>libraries/src</name>
 			<type>2</type>
 			<locationURI>WORKSPACE_LOC/due-project-library/src</locationURI>
